@@ -196,6 +196,4 @@ public class SelectStatement
                              clause,
                              numRecords);
     }
-
-
 }
